--- a/photons-interactor/config.json
+++ b/photons-interactor/config.json
@@ -1,10 +1,11 @@
 {
   "name": "Photons Interactor",
-  "version": "0.12.0.1",
+  "version": "0.12.0.2",
   "slug": "photons-interactor",
   "description": "Photons Interactor provides a local RESTful API for LIFX devices",
   "url": "https://photons.delfick.com/apps/interactor/homeassistant.html",
   "init": false,
+  "hassio_api": true,
   "arch": [
     "amd64",
     "aarch64",
