--- a/flicd/Dockerfile
+++ b/flicd/Dockerfile
@@ -1,18 +1,5 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/base/amd64:10.2.2
-# hadolint ignore=DL3006
-FROM ${BUILD_FROM}
-
-# Build arguments
-ARG BUILD_ARCH
-ARG BUILD_DATE
-ARG BUILD_DESCRIPTION
-ARG BUILD_NAME
-ARG BUILD_REF
-ARG BUILD_REPOSITORY
-ARG BUILD_VERSION
-
-# Set shell
-SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+ARG BUILD_FROM
+FROM $BUILD_FROM
 
 # Setup base
 RUN apk add --no-cache git ; \
@@ -29,26 +16,8 @@ RUN apk add --no-cache git ; \
     chmod +x /usr/bin/flicd; \
     rm -rf /tmp/src
 
-# Copy root filesystem and switch to the addon-specific location
-COPY rootfs /
-WORKDIR /data
+# Copy data
+COPY data/run.sh /
 
-# Labels
-LABEL \
-    io.hass.name="${BUILD_NAME}" \
-    io.hass.description="${BUILD_DESCRIPTION}" \
-    io.hass.arch="${BUILD_ARCH}" \
-    io.hass.type="addon" \
-    io.hass.version=${BUILD_VERSION} \
-    maintainer="Avi Miller <me@dje.li>" \
-    org.opencontainers.image.title="${BUILD_NAME}" \
-    org.opencontainers.image.description="${BUILD_DESCRIPTION}" \
-    org.opencontainers.image.vendor="Djelibeybi's Home Assistant Add-ons" \
-    org.opencontainers.image.authors="Avi Miller <me@dje.li>" \
-    org.opencontainers.image.licenses="MIT" \
-    org.opencontainers.image.url="https://github.com/Djelibeybi/hassio-addons" \
-    org.opencontainers.image.source="https://github.com/${BUILD_REPOSITORY}" \
-    org.opencontainers.image.documentation="https://github.com/${BUILD_REPOSITORY}/blob/main/README.md" \
-    org.opencontainers.image.created=${BUILD_DATE} \
-    org.opencontainers.image.revision=${BUILD_REF} \
-    org.opencontainers.image.version=${BUILD_VERSION}
+# run flicd
+CMD [ "/run.sh" ]
