--- a/flicd/build.yaml
+++ b/flicd/build.yaml
@@ -4,3 +4,6 @@ build_from:
   amd64: ghcr.io/home-assistant/amd64-base:3.16
   armhf: ghcr.io/home-assistant/armhf-base:3.16
   i386: ghcr.io/home-assistant/i386-base:3.16
+codenotary:
+  signer: me@dje.li
+  base_image: notary@home-assistant.io
