Switch back to git clone to get the flicd binary
Signed-off-by: Avi Miller <me@dje.li>

--- a/flicd/Dockerfile
+++ b/flicd/Dockerfile
@@ -9,16 +9,19 @@ ARG FLICD_VERSION
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Setup base
-RUN case $BUILD_ARCH in \
+RUN apk add --no-cache git ; \
+    case $BUILD_ARCH in \
         x86_64|amd64) export ARCH=x86_64 ;; \
         i386) export ARCH=i386 ;; \
         armhf|armv6l|armv7l) export ARCH=armv6l ;; \
         aarch64) export ARCH=aarch64 ;; \
     esac && \
-    export FLICD_URL="https://raw.githubusercontent.com/50ButtonsEach/fliclib-linux-hci/${FLICD_VERSION}/bin/${ARCH}/flicd" ; \
-    echo $FLICD_URL ; \
-    curl -fL "$FLICD_URL" -o /usr/bin/flicd ;\
-    chmod +x /usr/bin/flicd
+    git clone --depth 1 -b "${FLICD_VERSION}" \
+        https://github.com/50ButtonsEach/fliclib-linux-hci \
+        /tmp/src && \
+    cp "/tmp/src/bin/${ARCH}/flicd" /usr/bin/flicd && \
+    chmod +x /usr/bin/flicd; \
+    rm -rf /tmp/src
 
 # Copy data
 COPY data/run.sh /
