--- a/flicd/Dockerfile
+++ b/flicd/Dockerfile
@@ -13,7 +13,7 @@ RUN apk add --no-cache git ; \
     case $BUILD_ARCH in \
         x86_64|amd64) export ARCH=x86_64 ;; \
         i386) export ARCH=i386 ;; \
-        armhf|armv6l|armv7l) export ARCH=armv6l ;; \
+        armhf|armv7) export ARCH=armv6l ;; \
         aarch64) export ARCH=aarch64 ;; \
     esac && \
     git clone --depth 1 -b "${FLICD_VERSION}" \
