flicd needs libc so switch to Debian base image
Signed-off-by: Avi Miller <me@dje.li>

--- a/flicd/Dockerfile
+++ b/flicd/Dockerfile
@@ -9,19 +9,17 @@ ARG FLICD_VERSION
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Setup base
-RUN apk add --no-cache git ; \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get --assume-yes install git curl ; \
     case $BUILD_ARCH in \
         x86_64|amd64) export ARCH=x86_64 ;; \
         i386) export ARCH=i386 ;; \
         armhf|armv7) export ARCH=armv6l ;; \
         aarch64) export ARCH=aarch64 ;; \
     esac && \
-    git clone --depth 1 -b "${FLICD_VERSION}" \
-        https://github.com/50ButtonsEach/fliclib-linux-hci \
-        /tmp/src && \
-    cp "/tmp/src/bin/${ARCH}/flicd" /usr/bin/flicd && \
-    chmod +x /usr/bin/flicd; \
-    rm -rf /tmp/src
+    curl -fL "https://raw.githubusercontent.com/50ButtonsEach/fliclib-linux-hci/${FLICD_VERSION}/bin/${ARCH}/flicd" -o /usr/bin/flicd ; \
+    chmod +x /usr/bin/flicd ; \
+    apt-get --assume-yes remove git curl && apt-get --assume-yes autoremove ; \
+    rm -rf /var/cache/apt && rm -rf /tmp/src
 
 # Copy data
 COPY data/run.sh /
