--- a/flicd/build.yaml
+++ b/flicd/build.yaml
@@ -1,11 +1,11 @@
 image: "djelibeybi/hassio-flic-{arch}"
 shadow_repository: "ghcr.io/djelibeybi"
 build_from:
-  aarch64: ghcr.io/home-assistant/aarch64-base:3.16
-  amd64: ghcr.io/home-assistant/amd64-base:3.16
-  armhf: ghcr.io/home-assistant/armhf-base:3.16
-  armv7: ghcr.io/home-assistant/armv7-base:3.16
-  i386: ghcr.io/home-assistant/i386-base:3.16
+  aarch64: ghcr.io/home-assistant/aarch64-base-debian:bullseye
+  amd64: ghcr.io/home-assistant/amd64-base-debian:bullseye
+  armhf: ghcr.io/home-assistant/armhf-base-debian:bullseye
+  armv7: ghcr.io/home-assistant/armv7-base-debian:bullseye
+  i386: ghcr.io/home-assistant/i386-base-debian:bullseye
 codenotary:
   signer: me@dje.li
   base_image: notary@home-assistant.io
